# roslam

./: .gitignore  README.md
src/MATLAB/: .gitignore  AnchorLocalizer.m  FedEkf.m  FedEkfBag.m  RobotLocalizer.m  bag_field.m  bag_field_B2.m  bag_reader.m  bag_reader_B2_tests.m  bag_reader_prof.m  bag_reader_tests_prof.m  calcolo_errori.m  calcolo_errori_multiple.m  dati.m  dati_bag.m  dati_multiple.m  disegna.m  disegna_bag.m  disegna_campo.m  distanzaBordo.m  draw_traj.m  fit_polygon.m  fra.m  genera_traiettoria.m  genera_traiettoria_curv.m  grafici.m  grafici_bag.m  grafico_singolo.m  ground_truth.m  gt_test.m  icp2D.m  localize_anchors.m  localize_robots.m  main.m  main_bag.m  main_doppio.m  main_multiple.m  main_simulazione.m  main_simulazione_bag.m  main_simulazione_multiple.m  (+18 more)
src/MATLAB/B1_codes/FISmodulato/: istruzFigs.txt
src/MATLAB/B1_codes/FISmodulato/SLAM_2D/: Campanaro.m  CampanaroMaster.m  CampanaroReInit.m  CampanaroReInit2.m  CampanaroReInit2azzerando.m  CampanaroReInit3.m  FedEKF.m  FedEKFconKmisto.m  FedEKFconKmisto3step.m  FedEKFconPruning.m  FedEKFconPruningConKmisto.m  FedEKFconPruningConKmistoSenzaDoppioni.m  FedEKFconPruningConKmistoSenzaDoppioniCheckP.m  FedEKFconPruningConKmistoSenzaDoppioniSwitch.m  FedEKFconPruningConKnonMisto.m  FedEKFconPruningKmistoOneShot.m  FedEKFsequenziale.m  FedEKFsequenziale3step.m  FedEKFvarianzaGiusta.m  cercaOutlier.m  dati.m  disegnaFig.m  disegnaFiguraFinale.m  distanzaBordo.m  faiConfronto.m  faiConfrontoConRMSE.m  faiConfrontoInizioPruning.m  faiConfrontoInizioPruning2.m  faiConfrontoInizioPruningConRMSE.m  leggi.txt  main.m  percorsoRandom.m
src/MATLAB/B1_codes/FISmodulato/datiReali/: CampanaroReInit2SperimentaleDopoAvvioAzzerando.m  CampanaroReInit2SperimentaleDopoAvvioAzzerandoGT.m  CampanaroReInit2SperimentaleDopoAvvioAzzerandoGTbias.m  CampanaroReInitSperimentaleDopoAvvio.m  FedEKFconPruningConKmistoSenzaDoppioniSper.m  FedEKFconPruningConKmistoSenzaDoppioniSperDopoAvvio.m  FedEKFconPruningConKmistoSenzaDoppioniSperDopoAvvioSwitch.m  FedEKFconPruningConKnonMistoSper.m  FedEKFconPruningSperimentale.m  FedEKFconPruningSperimentaleDopoAvvio.m  FedEKFconPruningSperimentaleDopoAvvioGT.m  FedEKFconPruningSperimentaleDopoAvvioGTbias.m  FedEKFnRobotConPruning.m  FedEKFnRobotConPruningDopoAvvio.m  analizzaUWB.m  confronta3Casi.m  confrontaCasi.m  faiFiguraGT.m  faiFiguraMisure.m  filtraMisureTutteUnRobot.m  insiemeSper.m  insiemeSperGT.m  insiemeSperGTbias.m  leggi.txt  provaDatiConGTrobot.m
src/MATLAB/B1_codes/articoloCasoB1/: istruzioniFigure.txt
src/MATLAB/B1_codes/articoloCasoB1/proveSperimentali/: FedEKFCasoB1conOptInConPruning.m  FedEKFCasoB1conOptInConPruningSoloOdo.m  FedEKFnRobotConPruning.m  disegna0.m  (+22 more)
src/MATLAB/data/: errors_20250314_test5.txt  errors_20250314_test6.txt
src/MATLAB/ro_slam_interfaces/: package.xml
src/MATLAB/ro_slam_interfaces/msg/: Landmark.msg  Uwb.msg  UwbArray.msg
src/diff_drive/: CMakeLists.txt  DiffDrive.cc
src/joint_state_publisher/: CMakeLists.txt  JointStatePublisher.cc  JointStatePublisher.hh
src/joy2cmdvel/: CMakeLists.txt  package.xml
src/joy2cmdvel/config/: joy2cmdvel.yaml
src/joy2cmdvel/include/joy2cmdvel/: joy2cmdvel.hpp
src/joy2cmdvel/launch/: joy2cmdvel.launch.py
src/joy2cmdvel/src/: joy2cmdvel_app.cpp
src/joy2cmdvel/src/joy2cmdvel/: joy2cmdvel.cpp  joy2cmdvel_subscriptions.cpp
src/joystick/: CMakeLists.txt  package.xml
src/joystick/config/: joystick.yaml
src/joystick/include/joystick/: joystick.hpp
src/joystick/launch/: joystick.launch.py
src/joystick/src/: joystick_app.cpp
src/joystick/src/joystick/: joystick.cpp  joystick_utils.cpp
src/mean_var/: CMakeLists.txt  package.xml  test.ipynb
src/mean_var/config/: mv.yaml
src/mean_var/include/mean_var/: mean_var.hpp
src/mean_var/launch/: mv_app.launch.py
src/mean_var/src/: mean_var_app.cpp
src/mean_var/src/mean_var/: mean_var.cpp  mean_var_subscriptions.cpp
src/odometry_publisher/: CMakeLists.txt  OdometryPublisher.cc
src/ro_slam_bringup/: CMakeLists.txt  package.xml
src/ro_slam_bringup/config/: swarm.yaml  swarm_alias.yaml  swarm_alias_mod.yaml  uwb_drivers.yaml
src/ro_slam_bringup/launch/: joy.launch.py  joy1.launch.py  joy2.launch.py  joy3.launch.py  play_bags.launch.py  roslam.launch.py  swarm.launch.py  uwb_drivers.launch.py
src/ro_slam_cpp/: CMakeLists.txt  package.xml
src/ro_slam_cpp/config/: ro_slam_cpp.yaml
src/ro_slam_cpp/include/ro_slam_cpp/: fed_ekf.hpp  ro_slam.hpp
src/ro_slam_cpp/launch/: ro_slam_cpp.launch.py
src/ro_slam_cpp/src/: ro_slam_app.cpp
src/ro_slam_cpp/src/ro_slam_cpp/: ro_slam.cpp  ro_slam_fed_ekf.cpp  ro_slam_params.cpp  ro_slam_subscribers.cpp  ro_slam_utils.cpp
src/ro_slam_descriptions/: CMakeLists.txt  package.xml
src/ro_slam_descriptions/models/robot/: model.config
src/ro_slam_descriptions/models/uwb_anchor/: model.config
src/ro_slam_descriptions/models/worlds/: world_only_ign.sdf
src/ro_slam_interfaces/: CMakeLists.txt
src/ro_slam_interfaces/msg/: Joystick.msg  LandmarkArray.msg
src/ro_slam_py/: .gitignore  package.xml  setup.cfg  setup.py
src/ro_slam_py/config/: ro_slam_py.yaml
src/ro_slam_py/launch/: ro_slam_py.launch.py
src/ro_slam_py/ro_slam_py/: ro_slam_app.py  ro_slam_fed_ekf.py  ro_slam_node.py  ro_slam_params.py  ro_slam_roma2d.py  ro_slam_subscribers.py  ro_slam_utils.py
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/launch/: simulation_ign.launch.py
src/robot_sim/models/robot/: model.sdf
src/robot_sim/models/uwb_anchor/: model.sdf
src/robot_sim/models/wall/: model.sdf
src/robot_sim/urdf/: robot.urdf
src/udev/: 50-template.rules.example  50-uwb.rules  50-uwb1.rules  50-uwb2.rules  99-turtlebot3-cdc.rules  create_udev_rules.sh  readme
src/uwb_driver/: .gitignore  package.xml  setup.py
src/uwb_driver/config/: uwb_driver.yaml
src/uwb_driver/launch/: uwb_driver.launch.py
src/uwb_driver/uwb_driver/: uwb_driver.py
src/uwb_parser/: package.xml  setup.cfg  setup.py
src/uwb_parser/uwb_parser/: uwb_parser.py
src/uwb_plugin/: CMakeLists.txt  uwb_plugin.cc  uwb_plugin.hh
(+49 files in other folders)
