<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ro_slam_bringup</name>
  <version>1.0.0</version>
  <description>ROSLam bringup package</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joy2cmdvel</depend>
  <depend>joystick</depend>
  <depend>ro_slam_py</depend>
  <depend>ro_slam_interfaces</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>uwb_driver</depend>
  <depend>uwb_parser</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
