<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_driver</name>
  <version>1.0.0</version>
  <description>Driver for DWM1001 UWB device.</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>GNU GPL v3.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ro_slam_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
